--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 *.java linguist-detectable=true
 *.cpp linguist-detectable=false
-*.cmake linguist-detectable=false
+*.cmake.in linguist-detectable=false
